k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-server-deployment
  labels:
    app: feed-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed-server
  template:
    metadata:
      labels:
        app: feed-server
    spec:
      containers:
        - name: feed-server
          image: chuotcona123/feed-server:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
          ports:
            - containerPort: 3001
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1

---
apiVersion: v1
kind: Service
metadata:
  name: tinyurl-service
spec:
  type: NodePort
  selector:
    app: feed-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30101

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "3"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tinyurl-service
                port:
                  number: 3000
